[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/Sprites/Back.png" type="Texture" id=1]
[ext_resource path="res://Menus/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://Menus/Sprites/Music.png" type="Texture" id=3]
[ext_resource path="res://Menus/Sprites/SFX.png" type="Texture" id=4]
[ext_resource path="res://Menus/Volume.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1282.0
margin_bottom = 719.0
color = Color( 0.0235294, 0.027451, 0.0941176, 0.882353 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 920.0
margin_bottom = 419.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 339.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 43.0

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 126.0
margin_bottom = 43.0
icon = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 130.0
margin_right = 150.0
margin_bottom = 43.0
custom_constants/separation = 20
custom_styles/separator = SubResource( 5 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 800.0
margin_bottom = 187.0
custom_constants/separation = 140
custom_styles/separator = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 800.0
margin_bottom = 339.0

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 148.0
custom_constants/separation = 40
custom_styles/separator = SubResource( 4 )

[node name="Labels" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 248.0
margin_bottom = 148.0

[node name="Music" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Labels"]
margin_right = 204.0
margin_bottom = 77.0
texture = ExtResource( 3 )

[node name="SFX" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Labels"]
margin_top = 81.0
margin_right = 204.0
margin_bottom = 148.0
texture = ExtResource( 4 )

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 282.0
margin_bottom = 148.0
custom_constants/separation = 30
custom_styles/separator = SubResource( 2 )

[node name="Sliders" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 286.0
margin_right = 586.0
margin_bottom = 148.0
rect_min_size = Vector2( 300, 0 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/Sliders"]
margin_right = 300.0
margin_bottom = 30.0
custom_constants/separation = 30
custom_styles/separator = SubResource( 3 )

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/Sliders"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 50.0
min_value = -30.0
max_value = 0.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/Sliders"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 104.0
custom_constants/separation = 50
custom_styles/separator = SubResource( 3 )

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/Sliders"]
margin_top = 108.0
margin_right = 300.0
margin_bottom = 124.0
min_value = -30.0
max_value = 0.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Sliders/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Sliders/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
